Stopped OverFlow

--- a/src/assets/css/components/ContactEditor/DataView.css
+++ b/src/assets/css/components/ContactEditor/DataView.css
@@ -46,6 +46,5 @@
 }
 
 .dataview-content {
-
-     padding: 50px;
+     
 }
