--- a/src/assets/css/components/ContactEditor/Editor.css
+++ b/src/assets/css/components/ContactEditor/Editor.css
@@ -44,7 +44,7 @@
 
 .editor-content {
     width: 95%;
-    height: 100%;
+    height: 95%;
     display: flex;
     flex-direction: column;
     justify-content: start;
