--- a/src/assets/css/layouts/EmptyPage/EmptyPage.css
+++ b/src/assets/css/layouts/EmptyPage/EmptyPage.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     justify-content: start;
     align-self: center;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 .sidebar {
     padding-top: 3px;
@@ -52,11 +52,11 @@
     height: calc(100% - 1px);
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    align-self: start;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     border: 1px solid black;
     padding-top: 3px;
     padding-bottom: 3px;
