--- a/src/pages/editors/ContactEditor/style.ContactEditor.css
+++ b/src/pages/editors/ContactEditor/style.ContactEditor.css
@@ -5,27 +5,27 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    align-self: start;
+    align-self: center;
     align-items: center;
     background-color: khaki;
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
   }
   
   .page-title {
-    width: 90%;
-    height: auto;
+    width: 95%;
+    height: 95px;
     display: flex;
     flex-direction: column;
     align-self: center;
     font-size: 28px;
-    padding: 0;
-    margin-top: 15px;
-    border: 1px solid rgba(162, 38, 38, 0.861);
+    padding: 30px 0 30px 0;
+    margin: 0;
+    background-color: rgb(255, 140, 0);
 }
 
   .page-title-text {
+    background-color: beige;
     color: black;
     font-size: 25px;
     font-family: Roboto, "helvetica neue", sans-serif;
@@ -38,6 +38,7 @@
     text-align: center;
     text-shadow: 0 0 1px #ffffff, 0 0 2px #ffffff;
     padding: 0;
+    margin: 0;
 }
 
   .pages-subtitle-text {
@@ -58,15 +59,17 @@
 }
 
   .page-content {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: calc(100% - 1px - 95px);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    align-self: start;
     align-items: center;
-    padding: 0;
+    align-self: center;
+    padding: 10px 0 10px 0;
     margin: 0;
     border: 1px solid rgba(162, 38, 38, 0.861);
+    background-color: cadetblue;
+    overflow: auto;
   }
 
